fixed layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 body {
   font-family: "Nunito Sans", sans-serif;
-  background-color: hsl(0, 0%, 98%);
-  height: 100vh;
 }
 .dm {
   background-color: hsl(207, 26%, 17%);
+}
+#root {
+  background-color: hsl(0, 0%, 98%);
+}
+#root,
+.App {
+  height: 100%;
 }
